--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "next": "^13.4.4",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "^5.0.4"
